<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcomeTextView"
            style="@style/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/messageText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/message_placeholder"
            android:autofillHints="textPersonName" />

        <EditText
            android:id="@+id/phoneText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_placeholder"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/minsIntervalText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/interval_placeholder"
            android:autofillHints="number" />

        <Button
            android:id="@+id/startStopBtn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>